# LazyOwn

./: &1  .codacyrc  .env.example  .eslintignore  .eslintrc.json  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG.sh  CHEATSHEET.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMANDS.md  COMPARISON.md  CONTRIBUTING.md  Comando Descripción.yaml  DEPLOY.sh  Dockerfile.sandbox  Dokerfile.dockerfile  ESSENTIALS.md  Invoke-PowerShellTcp.ps1  LAZYOWN.md  LazyOwnExplorer.py  LazyOwn_metaextrac0r_metadata_gris.txt  PLAN_WORLDCLASS.md  QUICKSTART.md  README.html  README.md  SECURITY.md  TUTORIAL_ LazyOwn.md  UTILS.md  adversary.json  app.py  app.spec.dist  banner.py  bin_data_relevant.csv  (+73 more)
.github/: FUNDING.yml  dependabot.yml
banners/: README.md
cli/: README.md  __init__.py  aliases.py  aliases.yaml  assign.py  autosuggest.py  banner_config.py  cli_enhancements.py  command_chain.py  command_form.py  command_index.json  dashboard_tui.py  doctor.py  engagement_hooks.py  exploit_advisor.py  exploration.py  exploration_view.py  fuzzy_picker.py  graph_advisor.py  graph_overlay.py  killchain.py  lazynmap_post.py  ops_commands.py  palette.py  palette_command.py  palette_graph.py  palette_overlay.py  palette_telemetry.py  protips.py  reactive_hints.py  reasoning_stream.py  recommendation.py  recommendation_signals.py  recon_plan.py  registry.py  scope_guard.py  sessions_browser.py  show.py  splash.py  status_bar.py  (+8 more)
core/: README.md  __init__.py  config.py  console.py  crypto.py  dependencies.py  llm_budget.py  payload_schema.py  protocols.py  safe_subprocess.py  validators.py
csv/: bin_data.csv  bin_data_relevant.csv
docs/: ATTACK_MATRIX.md  CHANGELOG.html  CNAME  COMMANDS.html  LAZYOWN.html  PORTING_BOFS_TO_LINUX.md  README.html  README.md  SECURITY_CONTRACTS.md  SECURITY_PLAN.md  UTILS.html  WORLD_CLASS_PLAN.md  c2.md  command_chain.md  cred.md  enum.md  exfil.md  exploit.md  index.html  index.html.bak  lateral.md  persist.md  postexp.md  privesc.md  recon.md  report.md  style.css  template.html
env/: pyvenv.cfg
graphify-out/: .graphify_analysis_lazyown.json  .graphify_ast_focused.json  .graphify_cached.json  .graphify_chunk_02.json  .graphify_chunk_04.json  .graphify_chunk_07.json  .graphify_chunk_09.json  .graphify_chunk_11.json  .graphify_chunk_13.json  .graphify_chunk_14.json  .graphify_chunk_15.json  .graphify_chunk_16.json  .graphify_chunks.json  .graphify_detect.json  .graphify_detect_focused.json  .graphify_labels.json  .graphify_uncached.txt  GRAPH_REPORT.md  GRAPH_REPORT_LAZYOWN.md  README.md  cost.json  graph.html  graph.json  graph_lazyown.json  manifest.json
issues/: README.md  issue_16.md  issue_17.md  issue_30.md  issue_84.md
lazyaddons/: ATTPwn.yaml  BlackObsidianC2.yaml  CGOblin.yaml  CVE-2022-22077.yaml  CVE_2025_24071_PoC.yaml  Clematis.yaml  Fragnesia.yaml  FreeDom.yaml  Get_ReverseShell.yaml  GoPEInjection.yaml  LAzyOwnBT.yaml  LazyLoader.yaml  LazyOwnExplorer.yaml  LazyOwnOpenCodeAdapter.yaml  OverRide.yaml  PTMultiTools.yaml  PTMultiTools_scan.yaml  README.md  ShadowLink.yaml  adaptixc2.yaml  agentzero.yaml  argfuscator.yaml  aurorapatch.yaml  banner.yaml  bbr.yaml  beacon.yaml  blacksandbeacon.yaml  blacksandbeacon_bof.yaml  commix2.yaml  copyfail.yaml  curlfree.yaml  demiguise.yaml  dirtyfrag.yaml  ebird3.yaml  estorides.yaml  evilginx2.yaml  gcr.yaml  gemini-cli.yaml  gen_dll_rev.yaml  githubot.yaml  (+45 more)
lazyadversaries/: README.md  amsi.yaml  infect.yaml  inject_shellcode.yaml  lazynim.yaml  maleable_beacon.yaml  persist.yaml  pid.yaml  rust_implant.yaml
lazyc2/: README.md
lazygui/: README.md  __init__.py  __main__.py  app.py  version.py
lazyown-docker/: Dockerfile  Dokerfile.dockerfile  README.md  docker-compose.yml  entrypoint.sh  init.sh  mkdocker.sh
lazyscripts/: README.md  adversary.ls  atomic_agent.ls  atomic_agent_win.ls  certipy_ad.ls  dploot.ls  lazynmap.ls  lazyquit.ls  lazyscript.ls  pyautomate.ls  smb.ls  startup.ls
modules/: .test_lazyencoder_decoder.py.swp  49803.py  CVE-2018-15133.php  CVE-2023-28432.py  LazyOwnExplorer.py  Makefile  README.md  XssPayloads.txt  admin_panels.txt  agent_runner.py  agent_tool.py  ai_fallback.py  ai_model.py  amsi.c  amt_auth_bypass.py  apt_playbooks.py  atomic_enricher.py  batrat.bat  bin2img.py  bot.py  c2_builder.py  c2_profile.py  cal.sh  categories.py  collab_bp.py  colors.py  config_store.py  credentials.json  cve_matcher.py  dashboard_bp.py  detailed_search.py  detection_oracle.py  digispark.ino  digispark_android.ino  digispark_win.ino  duckdns.sh  eegg.sh  engagement_hooks.py  event_engine.py  evilhttprev.sh  (+157 more)
modules_ext/: README.md
parquets/: README.md  binarios.parquet  detalles.parquet  lolbas_details.parquet  lolbas_index.parquet  techniques.parquet  techniques_enriched.parquet
pcaps/: capture.pcap  capture_1717572328.pcap  capture_1717572407.pcap  capture_1717572563.pcap
persistent_chroma_db/: chroma.sqlite3
pipelines/: README.md  linux-initial-access.yaml  post-exploit-loop.yaml  recon-quick.yaml
playbooks/: ExamplePlaybook.yaml  LazyOwn_auto_20260321_014011.yaml  README.md  apt_apt28.yaml  apt_apt29.yaml  apt_apt41.yaml  apt_conti.yaml  apt_fin7.yaml  apt_lazarus.yaml  apt_lockbit.yaml  attack_plan.yaml  attack_plan_apt29.yaml
plugins/: 01 - template_plugins_yaml.yaml  README.md  generate_c_reverse_shell.lua  generate_c_reverse_shell.yaml  generate_cleanup_commands.lua  generate_cleanup_commands.yaml  generate_html_payload.lua  generate_html_payload.yaml  generate_lateral_command.lua  generate_lateral_command.yaml  generate_stub.lua  (+43 more)
(+610 files in other folders)
