# pyproject.toml
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyown"
version = "1.0.0"
description = "LazyOwn Framework - Red Team & Post-Exploitation Tool"
authors = [{ name = "Gris Iscomeback", email = "grisiscomeback@gmail.com" }]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "cmd2",
    "python-libnmap",
    "pwncat-cs",
    "pwn",
    "groq",
    "PyPDF2",
    "docx",
    "python-docx",
    "olefile",
    "exifread",
    "pycryptodome",
    "impacket",
    "pandas",
    "colorama",
    "tabulate",
    "pyarrow",
    "keyboard",
    "flask-unsign",
    "name-that-hash",
    "certipy-ad",
    "ast",
    "pykeepass",
    "Pillow",
    "netaddr",
    "stix2",
    "pyautogui",
    "networkx",
    "pyvis",
    "markdown",
    "scapy",
    "watchdog",
    "flask-login",
    "instal flask-wtf",
    "bcrypt",
    "pyyaml",
    "bs4",
    "dnslib",
    "python-telegram-bot",
    "nest_asyncio",
    "rich",
    "flask_socketio",
    "autobloody",
    "minikerberos",
    "tinydb",
    "msldap",
    "prettytable",
    "fire",
    "wget",
    "pypykatz",
    "donut",
    "uro",
    "lupa",
    "flask_sock",
    "donut-shellcode",
    "flask_limiter",
    "aiosmtpd",
    "yagmail",
    "validators",
    "ua_parser",
    "pdf2image",
    "python-magic",
    "packaging"
]


[project.scripts]
lazyown = "lazyown:main"

[project.urls]
Homepage = "https://github.com/grisuno/LazyOwn"
Repository = "https://github.com/grisuno/LazyOwn"
Documentation = "https://grisuno.github.io/LazyOwn/"